course-service refactor