@@ -1,16 +1,16 @@
 package com.duolingo.clone.courseservice.service.impl;
 
 import com.duolingo.clone.common.exception.ResourceNotFoundException;
-import com.duolingo.clone.courseservice.dto.CourseDto;
-import com.duolingo.clone.courseservice.dto.CourseResponseDto;
+import com.duolingo.clone.courseservice.dto.request.CourseRequestDTO;
+import com.duolingo.clone.courseservice.dto.response.CourseResponseDTO;
 import com.duolingo.clone.courseservice.entity.Course;
-import com.duolingo.clone.courseservice.mapper.CourseMapper;
 import com.duolingo.clone.courseservice.repository.CourseRepository;
 import com.duolingo.clone.courseservice.service.CourseService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,41 +19,52 @@ public class CourseServiceImpl implements CourseService {
     private final CourseRepository courseRepository;
 
     @Override
-    public CourseResponseDto createCourse(CourseDto dto) {
-        Course saved = courseRepository.save(CourseMapper.toEntity(dto));
-        return CourseMapper.toResponseDto(saved);
+    public CourseResponseDTO createCourse(CourseRequestDTO dto) {
+        Course course = Course.builder()
+                .courseTitle(dto.getCourseTitle())
+                .courseImageSrc(dto.getCourseImageSrc())
+                .build();
+        Course saved = courseRepository.save(course);
+        return mapToDTO(saved);
     }
 
     @Override
-    public List<CourseResponseDto> getAllCourses() {
+    public List<CourseResponseDTO> getAllCourses() {
         return courseRepository.findAll().stream()
-                .map(CourseMapper::toResponseDto)
-                .toList();
+                .map(this::mapToDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public CourseResponseDto getCourseById(Long id) {
+    public CourseResponseDTO getCourseById(Long id) {
         Course course = courseRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Course not found with id: " + id));
-        return CourseMapper.toResponseDto(course);
+                .orElseThrow(() -> new ResourceNotFoundException("Course not found"));
+        return mapToDTO(course);
     }
 
     @Override
-    public CourseResponseDto updateCourse(Long id, CourseDto dto) {
+    public CourseResponseDTO updateCourse(Long id, CourseRequestDTO dto) {
         Course course = courseRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Course not found with id: " + id));
-
+                .orElseThrow(() -> new ResourceNotFoundException("Course not found"));
         course.setCourseTitle(dto.getCourseTitle());
         course.setCourseImageSrc(dto.getCourseImageSrc());
-
-        return CourseMapper.toResponseDto(courseRepository.save(course));
+        Course updated = courseRepository.save(course);
+        return mapToDTO(updated);
     }
 
     @Override
     public void deleteCourse(Long id) {
         if (!courseRepository.existsById(id)) {
-            throw new ResourceNotFoundException("Course not found with id: " + id);
+            throw new ResourceNotFoundException("Course not found");
         }
         courseRepository.deleteById(id);
+    }
+
+    private CourseResponseDTO mapToDTO(Course course) {
+        CourseResponseDTO dto = new CourseResponseDTO();
+        dto.setCourseId(course.getCourseId());
+        dto.setCourseTitle(course.getCourseTitle());
+        dto.setCourseImageSrc(course.getCourseImageSrc());
+        return dto;
     }
 }
